# xian-contracting

./: .gitignore  README.md  build_tracer.py  pyproject.toml  release.sh  setup.py
.github/workflows/: main.yml
contracting/: client.py  constants.py
contracting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contracting/compilation/: compiler.py  linter.py
contracting/db/: contract.py  driver.py  hdf5.py  orm.py
contracting/execution/: executor.py  module.py  runtime.py
contracting/storage/: contract.py  driver.py  encoder.py  hdf5.py  orm.py
src/contracting/: client.py  constants.py
src/xian_contracting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: coverage.md  test_state_management.py  test_state_mangement.py  utils.py
tests/integration/: test_atomic_swap.py  test_builtins_locked_off.py  test_complex_contracts.py  test_complex_object_setting.py  test_constructor_args.py  test_datetime_contracts.py  test_dynamic_imports.py  test_executor_submission_process.py  test_executor_transaction_writes.py  test_memory_clean_up_after_execution.py  test_misc_contracts.py  test_pixel_game.py  test_rich_ctx_calling.py  test_run_private_function.py  test_senecaCompiler_integration.py  test_seneca_client_randoms.py  test_seneca_client_replaces_executor.py  test_stamp_deduction.py
tests/performance/: prof_transfer.py  test_transfer.py
tests/security/: test_erc20_token_hacks.py
tests/unit/: test_client.py  test_crypto.py  test_datetime.py  test_decimal.py  test_driver.py  test_encode.py  test_imports_stdlib.py  test_linter.py  test_module.py  test_new_cache_driver.py  test_new_contract_driver.py  test_new_driver.py  test_orm.py  (+3 more)
xian_contracting.egg-info/: SOURCES.txt  requires.txt
(+51 files in other folders)
